k8s/department-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
  labels:
    app: department
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
        - name: department
          image: zesow/department:1.3
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: 2000Mi
            limits:
              cpu: 1
              memory: 2000Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/info
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 5
          volumeMounts:
            - name: mongodb
              mountPath: /etc/secretspot
#            - name: config
#              mountPath: /etc/appconfig
      volumes:
        - name: mongodb
          secret:
            secretName: department
#        - name: config
#          configMap:
#            name: department
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: department
  labels:
    app: department
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 31091
  selector:
    app: department
  type: NodePort
