k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: zesow/gateway:1.3
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: "0.5"
            memory: 1000Mi
          limits:
            cpu: "0.5"
            memory: 1000Mi
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/info
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31088
  selector:
    app: gateway
  type: NodePort
