k8s/organization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
      - name: organization
        image: zesow/organization:1.3
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 1
            memory: 2000Mi
          limits:
            cpu: 1
            memory: 2000Mi
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/info
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
        volumeMounts:
          - name: mongodb
            mountPath: /etc/secretspot
#          - name: config
#            mountPath: /etc/appconfig
      volumes:
        - name: mongodb
          secret:
            secretName: organization
#        - name: config
#          configMap:
#            name: organization
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31089
  selector:
    app: organization
  type: NodePort
