k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.msyhu.com
    http:
      paths:
      - path: /employee
        backend:
          serviceName: employee-external
          servicePort: 8080
      - path: /department
        backend:
          serviceName: department-external
          servicePort: 8080
      - path: /organization
        backend:
          serviceName: organization-external
          servicePort: 8080
